[metadata]
name = kconfig-safety-check
author = Alexander Popov, Wenhui Zhang
author_email = alex.popov@linux.com, wenhui.zhang@bytedance.com
home-page = https://github.com/wenhuizhang/kconfig-hardened-check
description = A tool for checking the safety options of the Linux kernel
long-description = file: README.md
license = GNU General Public License v3 (GPLv3)
license-file = LICENSE.txt
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Topic :: Security
	Operating System :: POSIX :: Linux
	Environment :: Console
	Programming Language :: Python :: 3

[options]
zip_safe = true
include_package_data = true
packages = kconfig_safety_check
setup_requires = setuptools

[options.entry_points]
console_scripts = 
	kconfig-safety-check = kconfig_safety_check:main

